--- a/news.html
+++ b/news.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="/styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">  
     <link rel="stylesheet" href="styles/responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <title>my second project 5</title>
     
    
@@ -79,6 +80,9 @@
                     <div class="box">4</div>                    
                 </div>
             </section>
+            <div class="burger">
+                <i class="fa-solid fa-bars"></i>
+            </div>
         </section>
         <section>
             <iframe width="260" height="150" src="https://www.youtube.com/embed/XtZ2s3QDgS0?si=N6IsieoS-K_YUuWv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
