add  header responsive

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
     
-        <a class="logo" href="index.html"><img class="logo_image"  src="/./images/leave2.png" alt="leave2" title="leave2"></a>
+        <a class="logo" href="index.html"><img class="logo_image"  src="./images/leave2.png" alt="leave2" title="leave2"></a>
         
         <nav class="navigation">
             <ul>
